--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -118,5 +118,11 @@
       text-decoration: none;
 }
 
-
+.nav-footer{
+      position:absolute;
+      bottom: 0;
+      text-align: center;
+      color: #fff;
+      white-space: nowrap!important;
+}
 
